<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp"
        app:contentPadding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/margin_small">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/shoe_name_label_tv"
                    android:layout_width="@dimen/card_width_small"
                    android:layout_height="match_parent"
                    android:text="@string/add_shoe_screen_shoe_name_hint_text" />

                <TextView
                    android:id="@+id/shoe_name_tv"
                    android:layout_width="@dimen/card_width_medium"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/shoe_company_label_tv"
                    android:layout_width="@dimen/card_width_small"
                    android:layout_height="match_parent"
                    android:text="@string/add_shoe_screen_shoe_company_hint_text" />

                <TextView
                    android:id="@+id/shoe_company_tv"
                    android:layout_width="@dimen/card_width_medium"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/shoe_size_label_tv"
                    android:layout_width="@dimen/card_width_small"
                    android:layout_height="match_parent"
                    android:text="@string/add_shoe_screen_shoe_size_hint_text" />

                <TextView
                    android:id="@+id/shoe_size_tv"
                    android:layout_width="@dimen/card_width_medium"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/shoe_description_label_tv"
                    android:layout_width="@dimen/card_width_small"
                    android:layout_height="match_parent"
                    android:text="@string/add_shoe_screen_shoe_description_hint_text" />

                <TextView
                    android:id="@+id/shoe_description_tv"
                    android:layout_width="@dimen/card_width_medium"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>